--- a/eduvox/frontend/package.json
+++ b/eduvox/frontend/package.json
@@ -26,6 +26,7 @@
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^1.14.0",
     "tw-animate-css": "^1.2.5"
   },
